Solved bugs and added printing option